syntax = "proto3";
package osmosis.concentratedliquidity.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/any.proto";
import "osmosis/accum/v1beta1/accum.proto";
import "osmosis/concentrated-liquidity/params.proto";
import "osmosis/concentrated-liquidity/position.proto";
import "osmosis/concentrated-liquidity/tickInfo.proto";
import "osmosis/concentrated-liquidity/incentive_record.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/concentrated-liquidity/types/genesis";

// FullTick contains tick index and pool id along with other tick model
// information.
message FullTick {
  // pool id associated with the tick.
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  // tick's index.
  int64 tick_index = 2 [ (gogoproto.moretags) = "yaml:\"tick_index\"" ];
  // tick's info.
  TickInfo info = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"tick_info\""
  ];
}

// PoolData represents a serialized pool along with its ticks
// for genesis state.
message PoolData {
  // pool struct
  google.protobuf.Any pool = 1 [ (cosmos_proto.accepts_interface) = "PoolI" ];
  // pool's ticks
  repeated FullTick ticks = 2
      [ (gogoproto.moretags) = "yaml:\"ticks\"", (gogoproto.nullable) = false ];
  AccumObject fee_accumulator = 3 [
    (gogoproto.moretags) = "yaml:\"fee_accumulator\"",
    (gogoproto.nullable) = false
  ];
  repeated AccumObject incentives_accumulators = 4 [
    (gogoproto.moretags) = "yaml:\"incentives_accumulator\"",
    (gogoproto.nullable) = false
  ];
  // incentive records to be set
  repeated IncentiveRecord incentive_records = 5
      [ (gogoproto.nullable) = false ];
}

message PositionIdToPosition {
  uint64 position_id = 1 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
  Position position = 2 [ (gogoproto.nullable) = false ];
}

message AddressToPositionId {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 pool_id = 2 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  uint64 position_id = 3 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
  Position position = 4 [ (gogoproto.nullable) = false ];
}

// one poolId can hav many position ids
message PoolIdToPositionIds {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  repeated uint64 position_ids = 2
      [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
}

message PositionIdToLockId {
  uint64 position_id = 1 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
  uint64 lock_id = 2 [ (gogoproto.moretags) = "yaml:\"lock_id\"" ];
}

// GenesisState defines the concentrated liquidity module's genesis state.
message GenesisState {
  // params are all the parameters of the module
  Params params = 1 [ (gogoproto.nullable) = false ];
  // pool data containining serialized pool struct and ticks.
  repeated PoolData pool_data = 2 [ (gogoproto.nullable) = false ];

  repeated Position positions = 3 [ (gogoproto.nullable) = false ];

  repeated PositionIdToPosition position_id_to_position = 4
      [ (gogoproto.nullable) = false ];

  repeated AddressToPositionId address_to_position_id = 5
      [ (gogoproto.nullable) = false ];

  repeated PoolIdToPositionIds pool_id_to_position_ids = 6
      [ (gogoproto.nullable) = false ];

  repeated PositionIdToLockId position_id_to_lock_id = 7
      [ (gogoproto.nullable) = false ];

  uint64 next_position_id = 8
      [ (gogoproto.moretags) = "yaml:\"next_position_id\"" ];
}

message AccumObject {
  // In original struct of Accum object, store.KVStore is stored together.
  // For handling genesis, we do not need to include store.KVStore since we use
  // CL module's KVStore.

  // Accumulator's name (pulled from AccumulatorContent)
  string name = 1 [ (gogoproto.moretags) = "yaml:\"name\"" ];

  osmosis.accum.v1beta1.AccumulatorContent accum_content = 2;
}
